styles.css
*,
::after,
::before {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.document {
    display: none;
    z-index: 100;
}

.container {
    height: 100vh;
    width: 100%;
    background-color: #ccc;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 300;
}

.loaders {
    height: 100px;
    width: 54px;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.loaders div {
    height: 12px;
    width: 12px;
    border-radius: 50%;
    background-color: var(--primaryColor);
    --delay: 0ms;
    animation: load 400ms var(--delay) infinite ease-in-out alternate;
}

.loaders .two {
    --delay: 200ms;
}

.loaders .three {
    --delay: 400ms;
}

@keyframes load {
    to {
        transform: scale(1.1) translateY(10px);
    }
}

:root {
    --primaryColor: #000616;
    --secondaryColor: #000711;
    --mainOrange: #ff6600;
    --gradient: linear-gradient(to right, var(--mainOrange), #c7035e);
}

html {
    scroll-behavior: smooth;
    scroll-snap-type: mandatory 30px;
}

body {
    background-color: var(--primaryColor);
    min-height: 200vh;
    font-family: 'Nunito', serif;
    position: relative;
    overflow-x: hidden;
}

header {
    position: absolute;
    top: 0;
    width: 100vw;
    backdrop-filter: blur(5px);
    z-index: 100;
    transition: 1s;
}

header.scrolled {
    position: fixed;
    background-color: #fff;
    transform: rotateX(90deg);
    animation: header 300ms forwards ease-in-out;
    transform-origin: bottom;
}

@keyframes header {
    to {
        transform: rotateX(0deg);
    }
}

header .tittle {
    position: relative;
    min-height: 10vh;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

header nav {
    padding-right: 3em;
}

header nav ul {
    display: flex;
    list-style: none;
}

header nav li {
    padding-right: 1em;
    color: #fff;
}

.scrolled li {
    color: var(--primaryColor);
}

.contact {
    background-color: var(--mainOrange);
    padding: .8em 1em;
}

.mark {
    position: relative;
    top: -9vh;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

button {
    border: none;
    cursor: pointer;
    font-family: inherit;
    border-radius: 4px;
}

a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: 'Mochiy Pop P One', serif;
}

.small-menu {
    background-color: var(--secondaryColor);
    position: fixed;
    top: 10vh;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 210;
    padding: 2em;
    color: #fff;
    transform: translateX(110vw);
    transition: transform 400ms ease-in-out;
    display: none;
}

.small-menu ul {
    list-style: none;
}

.small-menu.show {
    transform: translateX(0vw);
}

.hamb {
    background: var(--gradient);
    width: 30px;
    height: 4px;
    position: absolute;
    right: 1em;
    bottom: 1em;
    cursor: pointer;
    display: none;
}

.hamb::after,
.hamb::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background: inherit;
    transition: transform 300ms ease-in-out;
}

.hamb::after {
    top: -6px;
}

.hamb::before {
    bottom: -6px;
}

.hamb.closed {
    background: transparent;
}

.hamb.closed::after,
.hamb.closed::before {
    height: 60%;
    width: 75%;
    top: 0px;
    bottom: 0px;
    background-color: #df0000;
}

.hamb.closed::after {
    transform: rotate(45deg);
}

.hamb.closed::before {
    transform: rotate(-45deg);
}

main {
    color: #fff;
}

main>section {
    padding-top: 10vh;
}

h1,
main h2,
.social-icons i,
.contact-heading {
    background: var(--gradient);
    width: fit-content;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
}

main h2 {
    font-family: 'Mochiy Pop P One', serif;
    padding: 1em 0;
    font-weight: bold;
    font-size: 1.5rem;
}

#hero {
    min-height: 100vh;
    background-size: 100% 100%;
    color: #fff;
    line-height: 2;
    background-color: var(--secondaryColor);
    position: relative;
    padding: 1em;
}

#hero h3 {
    font-size: 2.5rem;
    font-weight: bold;
}

#hero p {
    font-size: 1.3rem;
}

#hero .highlight {
    font-size: 2rem;
    color: var(--mainOrange);
    font-weight: bold;
}

#hero button {
    padding: 1.2em 3em;
    margin-top: 1em;
    background: var(--gradient);
    color: #fff;
    transition: 400ms ease-in-out;
}

#hero .fa-long-arrow-alt-right {
    transform: scaleX(2) translateX(4px);
}

#hero button:hover {
    background: #fff;
    color: var(--primaryColor);
}

.arrow {
    position: absolute;
    bottom: 20px;
    right: 50%;
    transform: scale(2) translateX(-50%);
    animation: slide 1s infinite linear alternate;
}

@keyframes slide {
    to {
        transform: scale(2) translate(-50%, 6px);
    }
}

#about p {
    max-width: 500px;
    padding: 0 2em;
    text-align: center;
}

.skillset,
.tools {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.skillset {
    padding: 2em 0;
}

.skillset article {
    background-color: var(--secondaryColor);
    width: 200px;
    height: 150px;
    padding: 2em 0;
    margin: 0 50px 50px 0;
    border-radius: 20px;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    position: relative;
    transition: 300ms 200ms ease-in-out;
    cursor: pointer;
    border: 1px solid var(--mainOrange);
}

.skillset article::after {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: #fff;
    z-index: -1;
    transform: scale(0);
    transition: 400ms ease-in-out;
    border-radius: inherit;
}

.skillset article:hover {
    background-color: transparent;
    color: var(--primaryColor);
    border-color: transparent;
}

.skillset article:hover::after {
    transform: scale(1);
}

.tools {
    padding-top: 1em;
}

.tools h3 {
    position: relative;
    text-align: center;
    padding: .5em 0;
}

.tools h3::after {
    content: '';
    position: absolute;
    bottom: -1px;
    left: 0;
    height: 1px;
    width: 100%;
    background: var(--gradient);
}

.tools article {
    background-color: var(--secondaryColor);
    width: 301px;
    min-height: 200px;
    margin: 0 10px 50px 0;
    position: relative;
    cursor: pointer;
}

.tools article::after,
.tools article::before {
    content: '';
    position: absolute;
    z-index: -1;
    top: -1px;
    left: -1px;
    right: -1px;
    height: calc(100% + 2px);
    transition: 500ms ease-in-out;
    background: var(--gradient);
}

.tools article::before {
    transform: scaleX(0);
}

.tools article:hover::after {
    transform: scaleY(0);
}

.tools article:hover::before {
    transform: scaleY(1);
}

.tools ul {
    list-style-type: square;
    list-style-position: inside;
    padding: 1em 0 0 1em;
}

.my-projects {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    place-items: center;
}

.my-projects h3 {
    padding-bottom: 1em;
    z-index: 3;
}

.my-projects article {
    width: 300px;
    min-height: 250px;
    margin-bottom: 1em;
    background-color: var(--secondaryColor);
    padding: 1em;
    overflow: hidden;
    position: relative;
    border: 1px solid var(--mainOrange);
    border-radius: 4px;
    transition: transform 500ms ease-in-out;
    cursor: pointer;
    --scale: 1;
}

.my-projects article:hover {
    transform: translateY(-4px);
    --scale: 0;
}

.my-projects img {
    height: 200px;
    width: calc(100% + 2em);
    position: relative;
    left: -1em;
}

.my-projects article::before,
.my-projects article::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    backdrop-filter: drop-shadow(4px 4px 10px var(--mainOrange));
    pointer-events: none;
    z-index: 2;
    transition: 400ms ease-in-out;
    transform: scaleX(var(--scale));
}

.my-projects article::before {
    clip-path: polygon(0 0, 100% 0, 0% 100%);
    background-color: #dbfdf52d;
    transform-origin: left;
}

.my-projects article::after {
    clip-path: polygon(100% 100%, 100% 0, 0% 100%);
    transform-origin: right;
    background-color: #01021f8a;
}

.my-projects a {
    padding: .4em 1em;
    border-radius: 3px;
    display: inline-block;
    --delay: 100ms;
    transform: translateX(400px);
}

.live {
    background-color: #fff;
    color: var(--primaryColor);
    border: 1px solid var(--primaryColor);
}

.code {
    background-color: var(--mainOrange);
    --delay: 5000ms;
}

.my-projects article:hover a {
    animation: bounce 800ms var(--delay) forwards ease-in-out;
}

@keyframes bounce {
    0% {
        transform: translateX(400px);
    }
    70% {
        transform: translateX(-20px);
    }
    100% {
        transform: translateX(0px);
    }
}

#contacts {
    background-color: var(--secondaryColor);
    padding-bottom: 2em;
}

.contacts-details {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

.contacts-details>section,
form {
    padding-left: 2em;
}

.contact-heading {
    padding: 2em 0;
}

.social-icons {
    display: flex;
    justify-content: flex-start;
    line-height: 2;
}

.social-icons i {
    margin-right: 1em;
    transform: scale(1.2);
    transition: 500ms ease-in-out;
}

.social-icons i:hover {
    transform: scale(1.2) rotateZ(360deg);
}

form label {
    display: block;
    padding: .8em 0;
    cursor: pointer;
    --warning: "Error";
    position: relative;
}

form input {
    height: 35px;
}

form input,
form textarea {
    width: 60%;
    border-radius: 4px;
    padding-left: 1em;
    margin-top: .5em;
    caret-color: var(--mainOrange);
    border: 1px solid transparent;
    outline: transparent;
    font-family: inherit;
}

.group.error input,
.group.error textarea {
    border-color: #ff0000;
    animation: vibrate 200ms ease-in-out forwards 3;
}

@keyframes vibrate {
    0% {
        transform: translateX(5px);
    }
    50% {
        transform: translateX(10px);
    }
    100% {
        transform: translateX(0px);
    }
}

.group.error label::after {
    content: 'The ' attr(data-name) ' you entered is not valid';
    position: absolute;
    bottom: 0px;
    left: 1em;
    font-size: .7rem;
    color: #ff0000;
}

form button {
    display: block;
    width: 60%;
    padding: 1em 3em;
    background-color: var(--mainOrange);
    border-radius: 10px;
    margin-top: 1em;
}

form button.sending {
    opacity: .7;
}

form button.sent {
    background-color: #008000;
}

.sent,
.sending {
    transform: translateY(10px);
    animation: change 400ms ease-in-out forwards;
    pointer-events: none;
}

.not-sent {
    background-color: #ff0000;
}

@keyframes change {
    to {
        transform: translateY(0px)
    }
}

form button:hover::after {
    transform: rotateX(0deg);
    color: #fff;
}

footer {
    min-height: 50px;
    background-color: var(--primaryColor);
    color: #fff;
}

@media (max-width:700px) {
    .my-projects,
    .contacts-details {
        grid-template-columns: 1fr;
    }
    .contacts-details {
        place-items: center;
    }
    form,
    .social-icons {
        width: 400px;
        margin: 2em 0;
    }
    form input,
    form textarea,
    form button {
        width: 90%;
    }
    .social-icons {
        justify-content: start;
    }
    header nav {
        display: none;
    }
    header h1 {
        position: absolute;
        left: 1em;
        top: 0em;
    }
    .small-menu {
        display: block;
    }
    .hamb {
        display: block;
    }
}

@media (max-width:400px) {
    form,
    .social-icons {
        width: 300px;
    }
    .arrow {
        display: none;
    }
}

